# saphire-typegen

./: Cargo.toml  readme.md
src/: lib.rs  raw_types.rs
